    were used.
  o Geoff Kuenning updated play/rec/soxeffect scripts to handle all effects
    added since 12.17. Spell-checked soxexam.1 file.
  o Jimen Ching updated ALSA configure support to auto-detect 4.x or 5.x API
    and compile correctly under those two.  All other versions are unsupported.
  o Merged in the NetBSD package changes into CVS finally.

sox-12.17.1
-----------
  o Andreas Kies fixed a bug were we were not detecting correctly
    if an output file was seekable.
  o Fixed a bug in the mask effect introduced in 12.17.  If the libc
    version of rand() returned more then 15-bit values then it would
    trash your data.  Reported by Friedhel Mehnert.
  o Added a new fade in/out effect from Ari Moisio.
  o AIFF files now ignore a MARK chunk if the loop type is NoLoop (0).
  o Fixed bug were it was impossible to output ADPCM data in wav files.
  o Fixed bug were rate had to be specified for sphere files (fix from
    Antti Honkela).
  o Added small work around to let compile with cygwin's gcc 95.2
    which also now allows to compile with GSM support under windows.
  o Removed accessing of sound devices in tests for sound support and
    instead just look for needed header files.  This allows the sound
    support to be detected even if the device is currently busy or when
    compiled on a box that doesn't have a sound card but the OS supports
    it (which is the enviornment of most distributions creating new
    binaries).
  o Added support to partially handle AIFC files but only uncompressed
    versions.  This should allow people to work with raw CD audio data
    on Mac OSX and also gives a basis for adding future support for
    things like ADPCM processing.
  o Added new "earwax" effect from Edward Beingessner.  It is meant to
    be used for CD audio played through headphones.  It will move the
    sound stage from left/right to in front of you.
  o Trim effect did not compute locations as was documented in the