@@ -50,6 +50,8 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PROG_CPP
 
+AC_CHECK_PROGS(SED, sed)
+
 dnl Set host type
 
 AC_CANONICAL_SYSTEM
