@@ -24,8 +24,8 @@ extern const unsigned char ulaw_comp_table[16384];
 #define st_ulaw_to_linear(ulawbyte)   ulaw_exp_table[ulawbyte]
 #define st_linear_to_ulaw(linearword) ulaw_comp_table[(unsigned short)linearword >> 2]
 #else
-unsigned char st_linear_to_ulaw(P1(short))REGPARM(1);
-int           st_ulaw_to_linear(P1(unsigned char))REGPARM(1);
+unsigned char st_linear_to_ulaw(short) REGPARM(1);
+int           st_ulaw_to_linear(unsigned char) REGPARM(1);
 #endif
 
 #ifdef FAST_ALAW_CONVERSION
@@ -34,7 +34,7 @@ extern const unsigned char Alaw_comp_table[16384];
 #define st_Alaw_to_linear(Alawbyte)   Alaw_exp_table[Alawbyte]
 #define st_linear_to_Alaw(linearword) Alaw_comp_table[(unsigned short)linearword >> 2]
 #else
-unsigned char st_linear_to_Alaw(P1(short))REGPARM(1);
-int           st_Alaw_to_linear(P1(unsigned char))REGPARM(1);
+unsigned char st_linear_to_Alaw(short) REGPARM(1);
+int           st_Alaw_to_linear(unsigned char) REGPARM(1);
 #endif
 
